# snub-app

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  index.html  package.json  settings.html
.github/: copilot-instructions.md
src/: main.ts  settings.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/modules/: audio.rs  commands.rs  errors.rs  menu.rs  mod.rs  setup.rs  sound.rs  tray.rs  types.rs
src/utilities/: debounce.ts
